# anidl-gui

./: .gitignore  CODE_OF_CONDUCT.md  README.md  TODO.md  index.html  latest.json  package.json  pnpm-lock.yaml
.github/workflows/: cicd.yml
components/: Download.css  Download.tsx  DownloadProgress.css  DownloadProgress.tsx  Header.css  Header.tsx  Search.css  Search.tsx  Settings.tsx
components/utils/: Update.tsx
contexts/: DownloadContext.tsx  SearchContext.tsx
src/: About.tsx  App.css  App.tsx  Download.css  Download.tsx  Search.tsx  Settings.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download.rs  main.rs  scraper.rs  settings.rs  utils.rs
