[package]
name = "anidl-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["Zero"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "notification-all", "shell-open", "notification"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
gogoanime-scraper = "1.1.6"
reqwest = "0.12.7"
dirs = "5.0.1"
toml = "0.8.19"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
