[package]
name = "anidl-gui"
version = "0.0.0"
description = "The fastest anime scraper/downloader"
authors = ["Zero"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all", "updater", "notification"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
gogoanime-scraper = "1.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies"] }
dirs = "5.0.1"
toml = "0.8.19"
futures = "0.3.30"
lazy_static = "1.5.0"
scraper = "0.20.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
